bugfix: scrollbar appearing when menu was on

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
 #menu {
     z-index: 1;
     background-color: antiquewhite;
-    width: 40%;
+    width: 33%;
     height: 100vh;
     text-align: center;
     position: absolute;
@@ -24,6 +24,11 @@
     top: 0;
     transition: all .75s ease;
     overflow: hidden;
+}
+
+#menu>button {
+    border: none;
+    
 }
 
 ul {
@@ -39,6 +44,7 @@ html, body {
     margin: 0;
     height: 100vh;
     width: 100vw;
+    overflow: hidden;
     font-family: Helvetica, Arial, sans-serif;
 }
 
